# mcp-server-diff-python

./: README.md  pyproject.toml
src/mcp_server_diff_python/: server.py
tests/mcp_server_diff_python/: test_server.py
