[project]
name = "mcp-server-diff-python"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "mcp>=1.2.0",]
[[project.authors]]
name = "tatn"
email = "tatn@users.noreply.github.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "build>=1.2.2.post1",
    "hatch>=1.14.0",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
    "twine>=6.0.1",
]

[project.scripts]
mcp-server-diff-python = "mcp_server_diff_python:main"
